# docs/swagger.json
@@ -1,10 +1,22 @@
 {
   "swagger": "2.0",
   "info": {
-    "contact": {}
+    "description": "API for Managing Products from Catalog.",
+    "title": "Catalog API",
+    "termsOfService": "http://swagger.io/terms/",
+    "contact": {
+      "name": "API Support",
+      "email": "batistell.labs@gmail.com"
     },
+    "license": {
+      "name": "Apache 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    },
+    "version": "1.0"
+  },
+  "basePath": "/",
   "paths": {
-    "/products": {
+    "/add": {
       "post": {
         "description": "Add a new product to the catalog",
         "consumes": [
@@ -24,7 +36,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/main.Product"
+              "$ref": "#/definitions/handlers.Product"
             }
           }
         ],
@@ -32,13 +44,13 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/main.ProductResponse"
+              "$ref": "#/definitions/handlers.ProductResponse"
             }
           },
           "400": {
             "description": "Bad Request",
             "schema": {
-              "$ref": "#/definitions/main.ErrorResponse"
+              "$ref": "#/definitions/handlers.ErrorResponse"
             }
           }
         }
@@ -46,7 +58,7 @@
     }
   },
   "definitions": {
-    "main.ErrorResponse": {
+    "handlers.ErrorResponse": {
       "type": "object",
       "properties": {
         "message": {
@@ -54,7 +66,7 @@
         }
       }
     },
-    "main.Product": {
+    "handlers.Product": {
       "type": "object",
       "properties": {
         "description": {
@@ -71,11 +83,11 @@
         }
       }
     },
-    "main.ProductResponse": {
+    "handlers.ProductResponse": {
       "type": "object",
       "properties": {
         "data": {
-          "$ref": "#/definitions/main.Product"
+          "$ref": "#/definitions/handlers.Product"
         },
         "message": {
           "type": "string"
